// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperValidators register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 724159,
}
`;

exports[`KeeperValidators register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 632477,
}
`;

exports[`KeeperValidators register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1540,
  "gasUsed": 361268,
}
`;

exports[`KeeperValidators register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1508,
  "gasUsed": 306949,
}
`;

exports[`KeeperValidators set validators rewards oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32146,
}
`;
